# visceral_fat

./: .gitignore  LICENSE  README.md  gui_interface.py  pyproject.toml  readme  utilities.py  visceral_fat_calculator.py  visceral_fat_calculator_test.py
src/visceral_fat/: gui_interface.py  utilities.py  visceral_fat_calculator.py  visceral_fat_calculator_test.py
tests/: visceral_fat_calculator_test.py
