[project]
name = "visceral-fat"
version = "1.0.0"
description = "Calculates the amount of visceral fat in your body (cm^2)"
readme = "README.md"
authors = [{ name = "Brad Fulton", email = "fultonbd@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
# visceral-fat = ".visceral_fat_calculator"
# visceral-fat = "visceral_fat.visceral_fat_calculator"
# visceral-fat = "src.visceral_fat.visceral_fat_calculator"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.1"]

#[tool.setuptools.packages.find]
#where = ["src"]
#include = ["visceral_fat*"]
#exclude = ["tests*"]

#[tool.pytest.ini_options]
#pythonpath = ["src"]

# [tool.uv] 
# package = true
