[project]
name = "visceral-fat"
version = "1.0.0"
description = "Calculates the amount of visceral fat in your body (cm^2)"
readme = "README.md"
authors = [{ name = "Brad Fulton", email = "fultonbd@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src/visceral_fat/"]
